--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Headshot Image -->
     <br />
     <br />
-    <center><img src="assets/kaleb.jpg" class="headshot" width="20%"></center>
+    <center><img src="assets/Kaleb.jpg" class="headshot" width="20%"></center>
     <br />
     <br />
     <!-- Columns format - 2 columns per row -->
