--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <!-- Column 1 -->
       <!-- <a href="projects/index.html" class="invisLink"> -->
-        <div class="column" onmouseover="enlargeSite()" onmouseout="shrinkSite()" onclick="window.open('file:///Users/nextechcatapult/Documents/Intro%20Website/projects/index.html')">
+        <div class="column" onmouseover="enlargeSite()" onmouseout="shrinkSite()" onclick="window.open('https://kalebharris.github.io/portfolio/projects')">
           <h2> My Projects </h2>
           <p> I have worked on a few projects in the past and during my time as a Catapult.
           Click here to view all of my active and past projects. </p>
@@ -40,7 +40,7 @@
       <!-- </a> -->
       <!-- Column 2 -->
       <!-- <a href="clubs/index.html" class="invisLink"> -->
-        <div class="column" onmouseover="enlargeClubs()" onmouseout="shrinkClubs()" onclick="window.open('file:///Users/nextechcatapult/Documents/Intro%20Website/clubs/index.html')">
+        <div class="column" onmouseover="enlargeClubs()" onmouseout="shrinkClubs()" onclick="window.open('https://kalebharris.github.io/portfolio/clubs')">
           <h2>My Clubs</h2>
           <ul>
             <li>VEX Robotics</li>
