--- a/index.html
+++ b/index.html
@@ -30,27 +30,29 @@
     <div class="container">
       <!-- Column 1 -->
       <!-- <a href="projects/index.html" class="invisLink"> -->
-        <div class="column" onmouseover="enlargeSite()" onmouseout="shrinkSite()" onclick="window.open('https://kalebharris.github.io/portfolio/projects')">
-          <h2> My Projects </h2>
-          <p> I have worked on a few projects in the past and during my time as a Catapult.
-          Click here to view all of my active and past projects. </p>
-          <center><img src="assets/autosite.png" class="enlarge" id="site"></center>
+        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/projects')">
+          <h2> About Me </h2>
+          <p> Learn about what I do in my freetime, including clubs I am involved in and my personal hobbies. </p>
 
         </div>
       <!-- </a> -->
       <!-- Column 2 -->
       <!-- <a href="clubs/index.html" class="invisLink"> -->
-        <div class="column" onmouseover="enlargeClubs()" onmouseout="shrinkClubs()" onclick="window.open('https://kalebharris.github.io/portfolio/clubs')">
-          <h2>My Clubs</h2>
+        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/clubs')">
+          <h2>My Skills</h2>
           <ul>
             <li>VEX Robotics</li>
             <li>Business Professionals of America</li>
             <li>Technology Student Association</li>
           </ul>
-          <center><img src="assets/robotic.jpg" class="enlarge" id="robotics"></center>
         </div>
       <!-- </a> -->
     </div>
+
+    <h1 style="text-align:center;"> My Projects </h1>
+    <hr class="thickLine">
+    <p style="text-align:center;"> Throughout the past few years I have worked on different projects for personal use or for school. Below you can
+      find all of my live projects, and also find a summary of past projects that are now inactive. </p>
     <!-- End row 1 -->
 
     <footer>
