--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Kaleb Harris</title>
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="assets/style.css">
-    <link rel="shortcut icon" href="assets/fc.png">
+    <link rel="shortcut icon" href="assets/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
 
