--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
     <!-- Row 1 -->
     <div class="container">
       <div class="projects" id="autoFlashes">
-        <h1> Auto Flashes Site </h1>
-        <h3> (Wordpress) </h3>
+        <h1> Auto Flashes Site <br /><font style="font-size:50%">(Wordpress)</font> </h1>
       </div>
       <div class="projects" id="">
       </div>
