--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 style="text-align:center;"> My Projects </h1>
     <hr class="thickLine">
 
-    <p style="text-align:center;"> Throughout the past few years I have worked on different projects for personal use or for school. Below you can
+    <p style="text-align:center; margin-left:10%; margin-right:10%;"> Throughout the past few years I have worked on different projects for personal use or for school. Below you can
       find all of my live projects, and also find a summary of past projects that are now inactive. </p>
 
     <hr class="dashed" />
