--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     <!-- Row 1 -->
     <div class="container">
       <div class="projects" id="autoFlashes" onclick="window.open('')">
-        <h1> Auto Flashes Site <br /><font style="font-size:50%">(Wordpress)</font> </h1>
+        <h1> Auto Flashes Site <br /><font style="font-size:50%">A wordpress site</font> </h1>
       </div>
-      <div class="projects" id="" onclick="window.open('')" >
-        <h1></h1>
+      <div class="projects" id="boomba" onclick="window.open('')" >
+        <h1>Boomba <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font></h1>
       </div>
     </div>
     <!-- Row 2 -->
