--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
     <!-- Row 2 -->
     <div class="container">
       <div class="projects" id="" onclick="window.open('')">
-        <h1></h1>
+        <h1>Coming Soon</h1>
       </div>
       <div class="projects" id="" onclick="window.open('')" >
-        <h1></h1>
+        <h1>Coming Soon</h1>
       </div>
     </div>
 
