--- a/index.html
+++ b/index.html
@@ -29,16 +29,14 @@
     <!-- Start Row 1 -->
     <div class="container">
       <!-- Column 1 -->
-      <!-- <a href="projects/index.html" class="invisLink"> -->
-        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/projects')">
+      <a href="clubs" class="invisLink">
+        <div class="column">
           <h2> About Me </h2>
           <p> Learn about what I do in my free time, including clubs I am involved in and my personal hobbies. </p>
-
         </div>
-      <!-- </a> -->
+      </a>
       <!-- Column 2 -->
-      <!-- <a href="clubs/index.html" class="invisLink"> -->
-        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/clubs')">
+        <div class="column" >
           <h2>My Skills/Experience</h2>
           <ul>
             <li>HTML & CSS</li>
@@ -46,7 +44,6 @@
             <li>Java</li>
           </ul>
         </div>
-      <!-- </a> -->
     </div>
     <!-- End row 1 -->
 
