--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <!-- Column 1 -->
       <!-- <a href="projects/index.html" class="invisLink"> -->
-        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/projects')">
+        <div class="column" onclick="window.open('clubs')">
           <h2> About Me </h2>
           <p> Learn about what I do in my free time, including clubs I am involved in and my personal hobbies. </p>
 
@@ -38,7 +38,7 @@
       <!-- </a> -->
       <!-- Column 2 -->
       <!-- <a href="clubs/index.html" class="invisLink"> -->
-        <div class="column" onclick="window.open('https://kalebharris.github.io/portfolio/clubs')">
+        <div class="column">
           <h2>My Skills/Experience</h2>
           <ul>
             <li>HTML & CSS</li>
@@ -61,10 +61,10 @@
 
     <!-- Row 1 -->
     <div class="container">
-      <div class="projects" id="autoFlashes" onclick="window.open('')">
+      <div class="projects" id="autoFlashes" onclick="window.open('https://autoflashes.org')">
         <h1> Auto Flashes Site <br /><font style="font-size:50%">A wordpress site</font> </h1>
       </div>
-      <div class="projects" id="boomba" onclick="window.open('')" >
+      <div class="projects" id="boomba" onclick="window.open('https://theboomba.com')" >
         <h1>Boomba <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font></h1>
       </div>
     </div>
