--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 
     <!-- Row 1 -->
     <div class="container">
-      <div class="projects" id="autoFlashes" onclick="window.open('https://autoflashes.org')">
-        <h1> Auto Flashes Site <br /><font style="font-size:50%">A wordpress site</font> </h1>
+      <div class="projects" id="boomba" onclick="window.open('http://theboomba.com')">
+        <h1> "The Boomba" <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font> </h1>
       </div>
-      <div class="projects" id="boomba" onclick="window.open('https://theboomba.com')" >
-        <h1>Boomba <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font></h1>
+      <div class="projects" id="" onclick="window.open('')" >
+        <h1>Coming Soon</h1>
       </div>
     </div>
     <!-- Row 2 -->
