--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="projects" id="boomba" onclick="window.open('http://theboomba.com')">
         <h1> "The Boomba" <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font> </h1>
       </div>
-      <div class="projects" id="" onclick="window.open('')" >
-        <h1>Coming Soon</h1>
+      <div class="projects" id="keyDetector" onclick="window.open('/keyDetector')" >
+        <h1>JavaScript Key Code Detector</h1>
       </div>
     </div>
     <!-- Row 2 -->
