--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="projects" id="boomba" onclick="window.open('http://theboomba.com')">
         <h1> "The Boomba" <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font> </h1>
       </div>
-      <div class="projects" id="keyDetector" onclick="window.open('/keyDetector')" >
+      <div class="projects" id="keyDetector" onclick="window.open('portfolio/keyDetector')" >
         <h1>JavaScript Key Code Detector</h1>
       </div>
     </div>
