--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
     <h1 style="text-align:center;"> My Projects </h1>
     <hr class="thickLine">
 
-    <p style="text-align:center; margin-left:20%; margin-right:20%;"> Throughout the past few years I have worked on different projects for personal use or for school. Below you can
-      find all of my live projects, and also find a summary of past projects that are now inactive. </p>
+    <p style="text-align:center; margin-left:20%; margin-right:20%;"> Listed below are all of the projects I have worked on during my time as a NexTech Catapult. Click on each one to view the project! </p>
 
     <hr class="dashed" />
     <br />
