--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
       <div class="projects" id="boomba" onclick="window.open('http://theboomba.com')">
         <h1> "The Boomba" <br /><font style="font-size:50%">A mock product site (Group HTML Project)</font> </h1>
       </div>
-      <div class="projects" id="keyDetector" onclick="window.open('https://kalebharris.github.io/portfolio/keyDetector')" >
-        <h1>JavaScript Key Code Detector</h1>
+      <div class="projects" id="stay" onclick="window.open('https://kalebharris.github.io/stayinGame')">
+        <h1>Flying Square Game</h1>
       </div>
     </div>
     <!-- Row 2 -->
     <div class="container">
-      <div class="projects" id="" onclick="window.open('')">
-        <h1>Coming Soon</h1>
+      <div class="projects" id="keyDetector" onclick="window.open('https://kalebharris.github.io/portfolio/keyDetector')" >
+        <h1>JavaScript Key Code Detector</h1>
       </div>
       <div class="projects" id="" onclick="window.open('')" >
         <h1>Coming Soon</h1>
