--- a/keyDetector/index.html
+++ b/keyDetector/index.html
@@ -2,13 +2,18 @@
 <html>
   <head>
     <title> Key Identifier </title>
+    <link rel="stylesheet" href="assets/styles.css">
   </head>
 
   <body>
-    <h1> Press any key to view that key's JavaScript Key Code </h1>
-    <br />
-    <h2> Key Code: </h2>
-    <p> No key pressed </p>
+    <center>
+      <h1> Press any key to view that key's JavaScript Key Code </h1>
+      <br />
+      <div class="box">
+        <h2> Key Code: </h2>
+        <p> No key pressed </p>
+      </div>
+    </center>
   </body>
   <script src="assets/script.js"></script>
 </html>
