--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <!-- Column 1 -->
       <!-- <a href="projects/index.html" class="invisLink"> -->
-        <div class="column" onclick="window.open('clubs')">
+        <div class="column" onclick="window.open('about_me')">
           <h2> About Me </h2>
           <p> Learn about what I do in my free time, including clubs I am involved in and my personal hobbies. </p>
 
