--- a/about_me/index.html
+++ b/about_me/index.html
@@ -11,21 +11,21 @@
 
     <link rel="stylesheet" href="../assets/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body class="aboutBody">
     <header><a href="../index.html" class="invisLink"> <h1>Kaleb Harris</h1></a> </header>
     <br />
     <img src="../assets/Kaleb.jpg" class="headshot" width="15%" align="left" style="margin-left: 5em;margin-top: 7em;">
-    <h1 style="text-align:center;margin-top:4.5em"> About Me </h1>
 
+    <h1 style="text-align:center;margin-top:1.6em;"> About Me </h1>
 
-
-    <p data-aos="fade-left" style="margin-left: 13em; margin-right: 1em; margin-bottom: 1em; font-size: 1.5em;"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
-    since early on in my life, and am currently participating in the NexTech Catapult Program, where I am learning more in depth web development and also am exploring the tech
+    <p data-aos="fade-left" style="padding: 1em;margin-left: 13em; margin-right: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
+    since early on in my life, and am currently participating in the NexTech Catapult Program where I am learning more in depth web development skills and also am exploring the tech
     scene in Indianapolis. I am involved in multiple clubs/teams and have a few good hobbies. You can learn more about these below!</p>
     <br />
-    <center><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 10em;"></center>
+    <center><a href="#scroll"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 10em;" align="middle" id="scroll"></a></center>
     <br />
     <center><div data-aos="fade-right" class="aboutR" style="margin-top: 5em;">
       <h1> Robotics </h1>
@@ -38,6 +38,7 @@
       <p> A new club that I just recently joined is the Technology Student Association, or TSA. In TSA we work on engineering or technology related projects throughout the year to then present
         in State and National level competitions. During the 2018-19 school year I competed in three events at the Indiana State Competition, and qualified for
         nationals in two of the three events. These events were Debating Technological Issues (1st place), Video Production (2nd place), and Essays on Technology (3rd place). <strong><a href="#videos" class="invisLink">Click here to jump to all the videos I have been involved in!</a></strong> </p>
+        <img class="aboutImg" src="../assets/tsa.png">
     </div>
 
     <div data-aos="fade-right" class="aboutR">
@@ -48,7 +49,9 @@
 
     <div data-aos="fade-left" class="aboutL">
       <h1> Electronics </h1>
-      <p> I enjoy working with
+      <p> I enjoy working with electronics to make projects using things like Arduinos and other components. I also enjoy working with computer hardware, building new PCs and upgrading older ones. One project that I have worked on is an ultrasonic levitation device, which levitates small foam pieces between two ultrasonic transducers.
+      I have also built my own gaming computer, and helped friends with building/buying their own. Pictured below is my ultrasonic levitator project.</p>
+      <img class="aboutImg" src="../assets/ultra.jpg">
     </div>
 
     <div data-aos="fade-right" class="aboutR">
