--- a/about_me/index.html
+++ b/about_me/index.html
@@ -27,12 +27,16 @@
     <br />
     <center><a href="#scroll"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 10em;" align="middle" id="scroll"></a></center>
     <br />
-    <center><div data-aos="fade-right" class="aboutR" style="margin-top: 5em;">
+    <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;">
       <h1> Robotics </h1>
       <p> I have been involved in robotics since my 7th grade year in 2014. Our team in 2014 was a first year team, and we placed 1st in the Indianapolis VEX IQ Competition, qualifying our team for the 2014-15 VEX
         World Championship. During the World Championship we ended up making into an alliance for Finals, where our alliance then placed 5th. Since then I have remained heavily involved, continuing on into high school. I am currently a Head Coach for our
         high school team and enjoy volunteering at our middle school to help teach the basics of robotics and run events. </p>
-    </div></center>
+        <div class="container">
+          <div class="column2"><img class="aboutImg" src="../assets/robotic2.jpg" style="width: 50%;"></div>
+          <div class="column2"><img class="aboutImg" src="../assets/robotic.jpg" style="width: 75%;"></div>
+        </div>
+    </div>
     <div data-aos="fade-left" class="aboutL">
       <h1> Technology Student Association (TSA) </h1>
       <p> A new club that I just recently joined is the Technology Student Association, or TSA. In TSA we work on engineering or technology related projects throughout the year to then present
@@ -55,7 +59,7 @@
     </div>
 
     <div data-aos="fade-right" class="aboutR">
-      <h1> Test </h1>
+      <h1>  </h1>
     </div>
 
     <div data-aos="fade-left" class="aboutL" id="videos">
