--- a/about_me/index.html
+++ b/about_me/index.html
@@ -49,6 +49,7 @@
       <h1> Business Professionals of America (BPA) </h1>
       <p> Business Professionals of America, or BPA, is a club similar in structure to TSA, however with a business focus on our events. I have competed in a Video Production team
       and in Spreadsheet Management(Microsoft Excel) for two years. Throughout the years our Video Production team placed 2nd and 1st at our regional conference. <strong><a href="#videos" class="invisLink">Click here to jump to all the videos I have been involved in!</a></strong>  </p>
+      <img class="aboutImg" src="../assets/bpa.jpg">
     </div>
 
     <div data-aos="fade-left" class="aboutL">
@@ -58,18 +59,16 @@
       <img class="aboutImg" src="../assets/ultra.jpg">
     </div>
 
-    <div data-aos="fade-right" class="aboutR">
-      <h1>  </h1>
-    </div>
-
-    <div data-aos="fade-left" class="aboutL" id="videos">
+    <div data-aos="fade-right" class="aboutR" id="videos">
       <h1> Video Production </h1>
       <p> I have been involved in Video Production teams for two years through BPA and TSA. I have worked primarily on filming and post-production for these videos. I also have created a few videos for
       our robotics team, for recruitment and for our website. </p>
       <center>
-        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PN1b0M7Fa1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/rAamyufc70Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br />
         <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/aHrDyjJVH5E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br />
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/PN1b0M7Fa1s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </center>
     </div>
 
