--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     </div>
     <!-- End row 1 -->
 
+    <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="500"></iframe>
+
     <h1 style="text-align:center;"> My Projects </h1>
     <hr class="thickLine">
 
