--- a/about_me/index.html
+++ b/about_me/index.html
@@ -15,11 +15,9 @@
   </head>
 
   <body class="aboutBody">
-    <header><a href="../index.html" class="invisLink"> <h1>Kaleb Harris</h1></a> </header>
+    <header><a href="../index.html" class="invisLink"> <h1>About Me</h1></a> </header>
     <br />
-    <img src="../assets/Kaleb.jpg" class="headshot" width="15%" align="left" style="margin-left: 5em;margin-top: 7em;">
 
-    <h1 style="text-align:center;margin-top:1.6em;"> About Me </h1>
 
     <p data-aos="fade-left" style="padding: 1em;margin-left: 13em; margin-right: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
     since early on in my life, and am currently participating in the NexTech Catapult Program where I am learning more in depth web development skills and also am exploring the tech
