--- a/about_me/index.html
+++ b/about_me/index.html
@@ -18,8 +18,7 @@
     <header><a href="../index.html" class="invisLink"> <h1>About Me</h1></a> </header>
     <br />
 
-
-    <p data-aos="fade-left" style="padding: 1em;margin-left: 13em; margin-right: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
+    <p data-aos="fade-left" style="padding: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
     since early on in my life, and am currently participating in the NexTech Catapult Program where I am learning more in depth web development skills and also am exploring the tech
     scene in Indianapolis. I am involved in multiple clubs/teams and have a few good hobbies. You can learn more about these below!</p>
     <br />
