--- a/about_me/index.html
+++ b/about_me/index.html
@@ -21,9 +21,9 @@
     since early on in my life, and am currently participating in the NexTech Catapult Program where I am learning more in depth web development skills and also am exploring the tech
     scene in Indianapolis. I am involved in multiple clubs/teams and have a few good hobbies. You can learn more about these below!</p>
     <br />
-    <center><a href="#scroll"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle" id="scroll"></a></center>
+    <center><a href="#scroll"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     <br />
-    <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;">
+    <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;" id="scroll">
       <h1> Robotics </h1>
       <p> I have been involved in robotics since my 7th grade year in 2014. Our team in 2014 was a first year team, and we placed 1st in the Indianapolis VEX IQ Competition, qualifying our team for the 2014-15 VEX
         World Championship. During the World Championship we ended up making into an alliance for Finals, where our alliance then placed 5th. Since then I have remained heavily involved, continuing on into high school. I am currently a Head Coach for our
