--- a/about_me/index.html
+++ b/about_me/index.html
@@ -16,13 +16,14 @@
 
   <body class="aboutBody">
 
-    <p data-aos="fade-left" style="padding: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
+    <p data-aos="fade-left" style="padding: 1em; margin-bottom: 1em; font-size: 1.5em; background-color: rgba(58, 54, 56, 0.8);" id="b1"> My name is Kaleb Harris and I am currently a Senior at Franklin Central High School. I have lived in Indiana for my entire life, and plan to stay here for some time. I have been interested in technology and computer science
     since early on in my life, and am currently participating in the NexTech Catapult Program where I am learning more in depth web development skills and also am exploring the tech
     scene in Indianapolis. I am involved in multiple clubs/teams and have a few good hobbies. You can learn more about these below!</p>
     <br />
-    <center><a href="#scroll"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
+    <center><a href="#b2"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     <br />
-    <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;" id="scroll">
+    <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;" id="b2">
+      <center><a href="#b1"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
       <h1> Robotics </h1>
       <p> I have been involved in robotics since my 7th grade year in 2014. Our team in 2014 was a first year team, and we placed 1st in the Indianapolis VEX IQ Competition, qualifying our team for the 2014-15 VEX
         World Championship. During the World Championship we ended up making into an alliance for Finals, where our alliance then placed 5th. Since then I have remained heavily involved, continuing on into high school. I am currently a Head Coach for our
@@ -31,6 +32,7 @@
           <div class="column2"><img class="aboutImg" src="../assets/robotic2.jpg" style="width: 50%;"></div>
           <div class="column2"><img class="aboutImg" src="../assets/robotic.jpg" style="width: 75%;"></div>
         </div>
+        <center><a href="#b3"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     </div>
     <div data-aos="fade-left" class="aboutL">
       <h1> Technology Student Association (TSA) </h1>
