--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
       <!-- </a> -->
     </div>
     <!-- End row 1 -->
+    <h1 style="text-align:center;"> About Me </h1>
+    <hr class="thickLine">
 
     <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="500"></iframe>
 
