--- a/about_me/index.html
+++ b/about_me/index.html
@@ -22,8 +22,9 @@
     <br />
     <center><a href="#b2"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     <br />
+
     <div data-aos="fade-right" class="aboutR" style="margin-top: 5em;" id="b2">
-      <center><a href="#b1"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
+      <center><a href="#b1"><img class="arrow" src="../assets/arrowUp.png" width="5%"" align="middle"></a></center>
       <h1> Robotics </h1>
       <p> I have been involved in robotics since my 7th grade year in 2014. Our team in 2014 was a first year team, and we placed 1st in the Indianapolis VEX IQ Competition, qualifying our team for the 2014-15 VEX
         World Championship. During the World Championship we ended up making into an alliance for Finals, where our alliance then placed 5th. Since then I have remained heavily involved, continuing on into high school. I am currently a Head Coach for our
@@ -32,31 +33,39 @@
           <div class="column2"><img class="aboutImg" src="../assets/robotic2.jpg" style="width: 50%;"></div>
           <div class="column2"><img class="aboutImg" src="../assets/robotic.jpg" style="width: 75%;"></div>
         </div>
-        <center><a href="#b3"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
+        <center><a href="#b3"><img class="arrow" src="../assets/arrow.png" width="5%" align="middle"></a></center>
     </div>
-    <div data-aos="fade-left" class="aboutL">
+
+    <div data-aos="fade-left" class="aboutL" id="b3">
+      <center><a href="#b2"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
       <h1> Technology Student Association (TSA) </h1>
       <p> A new club that I just recently joined is the Technology Student Association, or TSA. In TSA we work on engineering or technology related projects throughout the year to then present
         in State and National level competitions. During the 2018-19 school year I competed in three events at the Indiana State Competition, and qualified for
         nationals in two of the three events. These events were Debating Technological Issues (1st place), Video Production (2nd place), and Essays on Technology (3rd place). <strong><a href="#videos" class="invisLink">Click here to jump to all the videos I have been involved in!</a></strong> </p>
         <img class="aboutImg" src="../assets/tsa.png">
+      <center><a href="#b4"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     </div>
 
-    <div data-aos="fade-right" class="aboutR">
+    <div data-aos="fade-right" class="aboutR" id="b4">
+      <center><a href="#b3"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
       <h1> Business Professionals of America (BPA) </h1>
       <p> Business Professionals of America, or BPA, is a club similar in structure to TSA, however with a business focus on our events. I have competed in a Video Production team
       and in Spreadsheet Management(Microsoft Excel) for two years. Throughout the years our Video Production team placed 2nd and 1st at our regional conference. <strong><a href="#videos" class="invisLink">Click here to jump to all the videos I have been involved in!</a></strong>  </p>
       <img class="aboutImg" src="../assets/bpa.jpg">
+      <center><a href="#b5"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     </div>
 
-    <div data-aos="fade-left" class="aboutL">
+    <div data-aos="fade-left" class="aboutL" id="b5">
+      <center><a href="#b4"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
       <h1> Electronics </h1>
       <p> I enjoy working with electronics to make projects using things like Arduinos and other components. I also enjoy working with computer hardware, building new PCs and upgrading older ones. One project that I have worked on is an ultrasonic levitation device, which levitates small foam pieces between two ultrasonic transducers.
       I have also built my own gaming computer, and helped friends with building/buying their own. Pictured below is my ultrasonic levitator project.</p>
       <img class="aboutImg" src="../assets/ultra.jpg">
+      <center><a href="#videos"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     </div>
 
     <div data-aos="fade-right" class="aboutR" id="videos">
+      <center><a href="#b5"><img class="arrow" src="../assets/arrowUp.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
       <h1> Video Production </h1>
       <p> I have been involved in Video Production teams for two years through BPA and TSA. I have worked primarily on filming and post-production for these videos. I also have created a few videos for
       our robotics team, for recruitment and for our website. </p>
