--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 style="text-align:center;"> About Me </h1>
     <hr class="thickLine">
 
-    <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="500"></iframe>
+    <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="550" scrolling="no"></iframe>
 
     <h1 style="text-align:center;"> My Projects </h1>
     <hr class="thickLine">
