--- a/about_me/index.html
+++ b/about_me/index.html
@@ -60,7 +60,7 @@
       <h1> Electronics </h1>
       <p> I enjoy working with electronics to make projects using things like Arduinos and other components. I also enjoy working with computer hardware, building new PCs and upgrading older ones. One project that I have worked on is an ultrasonic levitation device, which levitates small foam pieces between two ultrasonic transducers.
       I have also built my own gaming computer, and helped friends with building/buying their own. Pictured below is my ultrasonic levitator project.</p>
-      <img class="aboutImg" src="../assets/ultra.jpg">
+      <img class="aboutImg" src="../assets/ultra.jpg" style="width:220px;">
       <center><a href="#videos"><img class="arrow" src="../assets/arrow.png" width="5%" style="margin-top: 1em;" align="middle"></a></center>
     </div>
 
