--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <br />
     <!-- Columns format - 2 columns per row -->
     <!-- Start Row 1 -->
-    
+
     <h1 style="text-align:center;"> About Me </h1>
     <hr class="thickLine">
 
-    <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="550" scrolling="no"></iframe>
+    <iframe src="https://kalebharris.github.io/portfolio/about_me/index.html" width="100%" height="550" scrolling="no" style="border: 0px;"></iframe>
 
     <h1 style="text-align:center;"> My Projects </h1>
     <hr class="thickLine">
