--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
     </div>
     <!-- Row 2 -->
     <div class="container">
+      <div class="projects" id="encrypt" onclick="window.open('https://studio.code.org/projects/applab/mCKpOLpp5MW-ZzyAAW2gWq8PHuJeTYRlTWltl8gw238')" >
+        <h1>Encryption App</h1>
+      </div>
       <div class="projects" id="keyDetector" onclick="window.open('https://kalebharris.github.io/portfolio/keyDetector')" >
         <h1>JavaScript Key Code Detector</h1>
-      </div>
-      <div class="projects" id="" onclick="window.open('')" >
-        <h1>Coming Soon</h1>
       </div>
     </div>
     <footer>
